--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+header {
+
+}
+.menu-bottom {
+
+  .btn-register {
+
+  }
+  .phone {
+
+  }
+  .adress {
+
+  }
+}
+
