--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,19 +1,22 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-header {
-
+.active_tour {
+  border-bottom: 1px solid #000;
 }
-.menu-bottom {
 
-  .btn-register {
-
+#columns {
+  #side {
+    float: right;
+    padding: 2em;
+    width: 19em;
   }
-  .phone {
-
-  }
-  .adress {
+  #main {
+    float: left;
+    padding: 2em;
+    width: 50em;
 
   }
 }
+
 
