--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,15 +7,15 @@
     %li
       = link_to 'Визы', visas_path
     %li
-      = link_to 'Туристам', "#"
+      = link_to 'Туристам', for_tourists_path
     %li
-      = link_to 'Корпоративным клиентам', "#"
+      = link_to 'Корпоративным клиентам', for_clients_path
     %li
-      = link_to 'Агенствам', "#"
+      = link_to 'Агенствам', for_agency_path
     %li
-      = link_to 'О компании', "#"
+      = link_to 'О компании', about_as_path
     %li
-      = link_to 'Контакты', "#"
+      = link_to 'Контакты', contacts_path
 .row
   .span2
   .phone.span3
