--- a/app/views/layouts/_active_tour.html.haml
+++ b/app/views/layouts/_active_tour.html.haml
@@ -1,16 +1,13 @@
-%table
-  %tr
-    %td.active_right
-      %dl
-        %dt
-          = @home.title
-        %dd
-          = raw @home.content
-    %td.active_left
-      = image_tag(@tour.tour_images.general.image.url(:big))
-      %h3= link_to @tour.title, tour_path(@tour)
-      = raw @tour.preview
-      .price_line
-        %span.price
-          от
-          = number_to_currency(@tour.price, precision: 0)
+.active_text
+  .active_content
+    = raw @home.content
+.active_right
+  = image_tag(@tour.tour_images.general.image.url(:big))
+  .right_title
+    %strong= link_to @tour.title, tour_path(@tour)
+  .right_content
+    = raw @tour.preview
+  .price_line
+    .price
+      от
+      = number_to_currency(@tour.price, precision: 0)
