--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,14 +1,8 @@
-.main.active_tour
-  .container
-    = render partial: 'layouts/active_tour'
-#columns
-  #main
-    %h3 Наши предложения
+.left
+  .tour_offers
     = render partial: 'layouts/tours'
-    %br
-    %p= render partial: 'layouts/country'
-  #side
-    %h3 Популярные виды отдыха
-    = render partial: 'layouts/tour_type'
-    %h3 Новости
-    = render partial: 'layouts/news'
+  .country
+    = render partial: 'layouts/country'
+.right
+  = render partial: 'layouts/tour_type'
+  = render partial: 'layouts/news'
