--- a/app/views/layouts/_country.html.haml
+++ b/app/views/layouts/_country.html.haml
@@ -1,3 +1,6 @@
 - @countries.each do |country|
-  %ul
-    %li= link_to country.title, "#"
+  .country_block
+    .flag
+      = image_tag(country.flag.url(:small))
+    .flag_title
+      = link_to country.title, tours_path(country: country.id)
