--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -1,19 +1,15 @@
-#columns
-  #main
-    %h3 Новости
-    - @news_all.each do |news|
-      %dl
-        %dt
-          = link_to news.title, news_path(news)
-        %dd
-          = truncate(strip_tags(news.content), length: 300)
-        %dd
-          = news.created_at
-  #side
-    %h3 Популярные виды отдыха
-    = render partial: 'layouts/tour_type'
-    %h3 Новости
-    = render partial: 'layouts/news'
-    %br
-    %br
-    %h3 Обратите внимание
+.left
+  %h4 Новости
+  - @news_all.each do |news|
+    %dl
+      %dt
+        = link_to news.title, news_path(news)
+      %dd
+        = truncate(strip_tags(news.content), length: 300)
+      %dd
+        = news.created_at.strftime("%B %e, %Y")
+.right
+  = render partial: 'layouts/tour_type'
+  = render partial: 'layouts/news'
+  %h2 Обратите внимание
+  = render partial: 'layouts/attention'
