--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,4 +1,7 @@
 .left
+  %h1 Заказ тура
+  %h2= @tour.title
+  = render 'form'
 .right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
