--- a/app/views/static_pages/for_agency.html.haml
+++ b/app/views/static_pages/for_agency.html.haml
@@ -1,13 +1,8 @@
-#columns
-  #main
-    %h3= @for_agency.title
-    = raw @for_agency.content
-  #side
-    %h3 Популярные виды отдыха
-    = render partial: 'layouts/tour_type'
-    %h3 Новости
-    = render partial: 'layouts/news'
-    %br
-    %br
-    %h3 Обратите внимание
-    = render partial: 'layouts/attention'
+.left
+  %h1= @for_agency.title
+  = raw @for_agency.content
+.right
+  = render partial: 'layouts/tour_type'
+  = render partial: 'layouts/news'
+  %h2 Обратите внимание
+  = render partial: 'layouts/attention'
