--- a/app/views/tours/show.html.haml
+++ b/app/views/tours/show.html.haml
@@ -1,16 +1,17 @@
-#columns
-  #main
-    %h2= @tour.title
-    - @tour.tour_images.each do |i|
-      = image_tag(i.image.url(:medium))
-    = raw @tour.overview
-    Цена от
-    = number_to_currency(@tour.price, precisions: 0)
-    %p= link_to "Назад", tours_path
-    %h3 Наши предложения
-    = render partial: 'layouts/tours'
-  #side
-    %h3 Популярные виды отдыха
-    = render partial: 'layouts/tour_type'
-    %h3 Новости
-    = render partial: 'layouts/news'
+.left
+  - if notice
+    = render 'layouts/messages'
+  %h1= @tour.title
+  - @tour.tour_images.each do |i|
+    = image_tag(i.image.url(:medium))
+  = raw @tour.overview
+  Цена от
+  = number_to_currency(@tour.price, precisions: 0)
+  = link_to "Заказать тур", new_tour_order_path(@tour), :class => 'btn'
+  %h2 Наши предложения
+  = render partial: 'layouts/tours'
+.right
+  %h2 Менеджер тура
+  = render partial: 'layouts/manager'
+  = render partial: 'layouts/tour_type'
+  = render partial: 'layouts/news'
