--- a/app/views/visas/show.html.haml
+++ b/app/views/visas/show.html.haml
@@ -1,2 +1,4 @@
-%h1 Visas#show
-%p Find me in app/views/visas/show.html.haml
+.left
+.right
+  = render partial: 'layouts/tour_type'
+  = render partial: 'layouts/news'
