--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -1,5 +1,9 @@
 .html
   background: white
+.notice
+  text-align: center
+  width: 640px
+  margin-left: 120px
 .container
   width: 1200px
   margin: 0 auto
