--- a/app/views/static_pages/for_tourists.html.haml
+++ b/app/views/static_pages/for_tourists.html.haml
@@ -1,5 +1,5 @@
 .left
-  = @for_tourists.title
+  %h1= @for_tourists.title
   = raw @for_tourists.content
 .right
   = render partial: 'layouts/tour_type'
