--- a/app/views/visas/show.html.haml
+++ b/app/views/visas/show.html.haml
@@ -1,4 +1,8 @@
 .left
+  %h1= @visa.title
+  = raw @visa.overview
 .right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
+  %h3 Обратите внимание
+  = render partial: 'layouts/attention'
