--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,9 @@
 
     .main.content
       .container
+        .notice
+          - if notice
+            = render 'layouts/messages'
         = yield
     %footer
       .main.bottom-panel
