--- a/app/views/visas/index.html.haml
+++ b/app/views/visas/index.html.haml
@@ -1,4 +1,9 @@
 .left
+  %h1 Визы
+  - @visas.each do |visa|
+    %ul
+      %li= link_to visa.title, visa_path(visa)
+
 .right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
