--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -1,5 +1,6 @@
 .html
   background: white
+
 .notice
   text-align: center
   width: 640px
@@ -63,7 +64,7 @@
   font-family: "Arial"
   color: rgb( 131, 131, 131 )
   margin: 15px 0px 0px 322px
-  width: 280px
+  width: 300px
 .number
   font-size: 15px
   font-family: "Arial"
@@ -76,12 +77,12 @@
   font-size: 13px
   font-family: "Arial"
   color: rgb( 131, 131, 131 )
-  width: 380px
+  width: 400px
 //margin-left: 631px
 .adress_line
   font-size: 15px
   font-family: "Arial"
-  width: 380px
+  width: 400px
   height: 15px
   a
     color: rgb( 14, 96, 160 )
@@ -101,6 +102,9 @@
   margin: 45px 0px 0px 120px
   width: 357px
   height: 275px
+.active_content
+  height: 275px
+  overflow: auto
 
 //.active_title
 //  font-weight: bold !important
@@ -131,7 +135,7 @@
   font-size: 20px
   font-family: "Arial"
   color: rgb( 0, 0, 0 )
-  margin: 27px 0 0 303px
+  margin: 23px 0 0 303px
 .content
   width: 1400px
   height: auto
@@ -183,18 +187,20 @@
   margin-top: 51px
 .country_block
   display: inline-block
+  min-width: 137px
+  width: auto
 .flag
   float: left
   width: 24px
   height: 16px
 .flag_title
-  width: 65px
-  float: right
+  //width: 65px
+  //float: right
   font-size: 16px
   font-family: "Arial"
   font-weight: bold
   line-height: 2.25
-  margin: -5px 40px 3px 7px
+  margin: -7px 0px 8px 32px
   a
     color: rgb( 14, 96, 160 )
     text-decoration: underline
@@ -250,11 +256,11 @@
   height: 205px
 
 .footer
-  margin-top: 40px
+  margin-top: 43px
 
 .copy_right
   margin: 0 0 0 122px
-  width: 170px
+  width: 177px
   font-size: 15px
   font-family: "Arial"
   color: rgb( 0, 0, 0 )
@@ -277,7 +283,7 @@
   font-family: "Arial"
   color: rgb( 131, 131, 131 )
   margin: 29px 0px 0px  327px
-  width: 282px
+  width: 300px
 .number_footer
   font-size: 15px
   font-family: "Arial"
@@ -291,11 +297,11 @@
   font-size: 13px
   font-family: "Arial"
   color: rgb( 131, 131, 131 )
-  width: 380px
+  width: 400px
 .adress_line_footer
   font-size: 15px
   font-family: "Arial"
-  width: 380px
+  width: 400px
   height: 15px
   a
     color: rgb( 14, 96, 160 )
