--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,8 +1,8 @@
+-#.home-panel.clearfix
+-#  = render partial: 'layouts/home_panel'
 .left
-  .tour_offers
-    = render partial: 'layouts/tours'
-  .country
-    = render partial: 'layouts/country'
+  = render partial: 'layouts/tours_block'
+  = render partial: 'layouts/country'
 .right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
