--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -103,6 +103,7 @@ body
   width: 560px
   background-color: #ffffff
   box-shadow: 0 0 5px gray
+  min-height: 272px
 .active-left
   float: left
   width: 282px
@@ -114,6 +115,7 @@ body
   h2
     font-size: 27px
     margin: 0 0 11px
+    line-height: 30px
   p
     font-size: 13px
     color: #626262
